prd/static/ssh-key/ssh-key-svc.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: ssh-key-svc
spec:
  selector:
    app: ssh-key
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
