prd/static/ssh-key/ssh-key-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ssh-key-ingress
  annotations:
    cert-manager.io/issuer: ssh-key-letsencrypt
    kubernetes.io/ingress.class: "traefik"
spec:
  tls:
  - hosts:
    - ssh-key.k3cloud.gq
    secretName: ssh-key-secret
  rules:
  - host: ssh-key.k3cloud.gq
    http:
      paths:
      - path: /
        backend:
          serviceName: ssh-key-svc
          servicePort: 80
